--- a/exercise4/home.html
+++ b/exercise4/home.html
@@ -1,11 +1,16 @@
 <html>
 	<head>
 		<title>Online Task List</title>
+		<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">		
+		<link href="style.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">		
-		<link href="style.css" rel="stylesheet">
+		<script src="EventDispatcher.js"></script>
+		<script src="TaskModel.js"></script>
+		<script src="TaskView.js"></script>
+		<script src="TaskController.js"></script>		
 	</head>
 	<body>
 		<div id="AppContainer" class="container">
@@ -25,11 +30,6 @@
 				</div>	
 			</div>
 		</div>
-
-		<script src="EventDispatcher.js"></script>
-		<script src="TaskModel.js"></script>
-		<script src="TaskView.js"></script>
-		<script src="TaskController.js"></script>
 		<script src="App.js"></script>
 	</body>
 </html>
